@@ -44,7 +44,6 @@ import org.thingsboard.server.common.msg.TbMsg;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 import static org.thingsboard.server.common.data.msg.TbMsgType.ACTIVITY_EVENT;
@@ -115,14 +114,13 @@ public class TbCopyAttributesToEntityViewNode implements TbNode {
                                                     .build());
                                         }
                                     } else {
-                                        Set<AttributeKvEntry> attributes = JsonConverter.convertToAttributes(JsonParser.parseString(msg.getData()));
-                                        List<AttributeKvEntry> filteredAttributes =
-                                                attributes.stream().filter(attr -> attributeContainsInEntityView(scope, attr.getKey(), entityView)).collect(Collectors.toList());
+                                        List<AttributeKvEntry> attributes = JsonConverter.convertToAttributes(JsonParser.parseString(msg.getData())).stream()
+                                                .filter(attr -> attributeContainsInEntityView(scope, attr.getKey(), entityView)).toList();
                                         ctx.getTelemetryService().saveAttributes(AttributesSaveRequest.builder()
                                                 .tenantId(ctx.getTenantId())
                                                 .entityId(entityView.getId())
                                                 .scope(scope)
-                                                .entries(filteredAttributes)
+                                                .entries(attributes)
                                                 .callback(getFutureCallback(ctx, msg, entityView))
                                                 .build());
                                     }
